--- a/index.html
+++ b/index.html
@@ -3,10 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Premier League Insider</title>
     <link rel="stylesheet" href="./main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <h1>Premier League Insider</h1>
+            <img src="./images/Logo.png" alt="Logo Premier League">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about">Sobre a página</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contato</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section id="articles">
+        <div class="container">
+            <div class="posts">
+                <h2>Notícias do City</h2>
+                <span>Atualizado 20 de Fevereiro 2024</span>
+                <img src="./images/City.jpg" alt="Logo do Manchester City">
+                <p>
+                    Donec felis ipsum, tempus a ante imperdiet, tempus congue orci. Nullam eleifend leo vel turpis tincidunt, quis euismod orci condimentum. 
+                    Cras id augue ut ante rhoncus aliquet eget nec dui. 
+                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; 
+                    Ut ipsum enim, porta venenatis aliquam non, iaculis a erat. Mauris et mollis lacus. 
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
+                    Fusce dapibus egestas suscipit. Suspendisse at tortor ac felis tristique dictum id at augue. 
+                    Mauris tincidunt, lacus non iaculis consectetur, quam tellus dignissim mauris, id consequat mauris mauris et erat. 
+                    Mauris pretium tincidunt neque, vitae vehicula justo aliquet vel.
+                </p>
+                <a href="">Leia mais</a>
+            </div>
+
+            <div class="posts">
+                <h2>Notícias do Chelsea</h2>
+                <span>Atualizado 20 de Fevereiro 2024</span>
+                <img src="./images/Chelsea.jpg" alt="Logo do Chelsea">
+                <p>
+                    Donec felis ipsum, tempus a ante imperdiet, tempus congue orci. Nullam eleifend leo vel turpis tincidunt, quis euismod orci condimentum. 
+                    Cras id augue ut ante rhoncus aliquet eget nec dui. 
+                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; 
+                    Ut ipsum enim, porta venenatis aliquam non, iaculis a erat. Mauris et mollis lacus. 
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
+                    Fusce dapibus egestas suscipit. Suspendisse at tortor ac felis tristique dictum id at augue. 
+                    Mauris tincidunt, lacus non iaculis consectetur, quam tellus dignissim mauris, id consequat mauris mauris et erat. 
+                    Mauris pretium tincidunt neque, vitae vehicula justo aliquet vel.
+                </p>
+                <a href="">Leia mais</a>
+            </div>
+
+            <div class="posts">
+                <h2>Notícias do Arsenal</h2>
+                <span>Atualizado 20 de Fevereiro 2024</span>
+                <img src="./images/Arsenal.jpg" alt="Logo do Arsenal">
+                <p>
+                    Donec felis ipsum, tempus a ante imperdiet, tempus congue orci. Nullam eleifend leo vel turpis tincidunt, quis euismod orci condimentum. 
+                    Cras id augue ut ante rhoncus aliquet eget nec dui. 
+                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; 
+                    Ut ipsum enim, porta venenatis aliquam non, iaculis a erat. Mauris et mollis lacus. 
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
+                    Fusce dapibus egestas suscipit. Suspendisse at tortor ac felis tristique dictum id at augue. 
+                    Mauris tincidunt, lacus non iaculis consectetur, quam tellus dignissim mauris, id consequat mauris mauris et erat. 
+                    Mauris pretium tincidunt neque, vitae vehicula justo aliquet vel.
+                </p>
+                <a href="">Leia mais</a>
+            </div>
+
+            <div class="posts">
+                <h2>Notícias do Liverpool</h2>
+                <span>Atualizado 20 de Fevereiro 2024</span>
+                <img src="./images/Liverpool.jpg" alt="Logo do Liverpool">
+                <p>
+                    Donec felis ipsum, tempus a ante imperdiet, tempus congue orci. Nullam eleifend leo vel turpis tincidunt, quis euismod orci condimentum. 
+                    Cras id augue ut ante rhoncus aliquet eget nec dui. 
+                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; 
+                    Ut ipsum enim, porta venenatis aliquam non, iaculis a erat. Mauris et mollis lacus. 
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
+                    Fusce dapibus egestas suscipit. Suspendisse at tortor ac felis tristique dictum id at augue. 
+                    Mauris tincidunt, lacus non iaculis consectetur, quam tellus dignissim mauris, id consequat mauris mauris et erat. 
+                    Mauris pretium tincidunt neque, vitae vehicula justo aliquet vel.
+                </p>
+                <a href="">Leia mais</a>
+            </div>
+        </div>
+        </div>
+    </section>
 </body>
 </html>
