--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 
     <section id="articles">
         <div class="container">
+            
             <div class="posts">
-                <h2>Notícias do City</h2>
+                <h2>Notícias do Liverpool</h2>
                 <span>Atualizado 20 de Fevereiro 2024</span>
-                <img src="./images/City.jpg" alt="Logo do Manchester City">
+                <img src="./images/Liverpool.jpg" alt="Logo do Liverpool">
                 <p>
                     Donec felis ipsum, tempus a ante imperdiet, tempus congue orci. Nullam eleifend leo vel turpis tincidunt, quis euismod orci condimentum. 
                     Cras id augue ut ante rhoncus aliquet eget nec dui. 
@@ -85,9 +86,9 @@
             </div>
 
             <div class="posts">
-                <h2>Notícias do Liverpool</h2>
+                <h2>Notícias do City</h2>
                 <span>Atualizado 20 de Fevereiro 2024</span>
-                <img src="./images/Liverpool.jpg" alt="Logo do Liverpool">
+                <img src="./images/City.jpg" alt="Logo do Manchester City">
                 <p>
                     Donec felis ipsum, tempus a ante imperdiet, tempus congue orci. Nullam eleifend leo vel turpis tincidunt, quis euismod orci condimentum. 
                     Cras id augue ut ante rhoncus aliquet eget nec dui. 
@@ -100,8 +101,17 @@
                 </p>
                 <a href="">Leia mais</a>
             </div>
+
         </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <p>
+                &copy; Premier League Insider - Todos os direitos reservados - 2024
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
