--- a/index.html
+++ b/index.html
@@ -3,28 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premier League Insider</title>
+    <title>Premier League Insider - Tudo sobre a melhor liga de futebol do mundo</title>
     <link rel="stylesheet" href="./main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Premier League Insider</h1>
+            <a id="home" href="index.html">Premier League Insider</a>
             <img src="./images/Logo.png" alt="Logo Premier League">
             <nav>
                 <ul>
                     <li>
-                        <a href="#about">Sobre a página</a>
+                        <a href="about.html">Sobre a página</a>
                     </li>
                     <li>
-                        <a href="#contact">Contato</a>
+                        <a href="contact.html">Contato</a>
                     </li>
                 </ul>
             </nav>
@@ -105,7 +103,6 @@
         </div>
         </div>
     </section>
-
     <footer>
         <div class="container">
             <p>
